Publish progress states updates. Fix test